tests/expected_invalid_non_exhaustive_match.diag.out
<input>:8:5: error: non-exhaustive match over state 'FeatureMode'; missing 'ProviderBacked'
        match mode {
        ^^^^^^^^^^^^
